y.output
State 6 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 19 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 40 conflicts: 2 reduce/reduce
State 48 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: ε
    3          | stmt_list stmt T_EOL
    4          | stmt_list T_EOL
    5          | stmt_list error T_EOL
    6          | stmt_list stmt

    7 stmt: expr
    8     | T_ID T_ASSIGN expr
    9     | T_DEF T_ID T_LPAREN T_ID T_RPAREN T_ASSIGN expr
   10     | T_PRINT T_LPAREN expr T_RPAREN
   11     | T_PLOT T_LPAREN expr T_COMMA T_ID T_COMMA expr T_COMMA expr T_RPAREN

   12 expr: term
   13     | expr T_PLUS term
   14     | expr T_MINUS term
   15     | T_MINUS term

   16 term: factor
   17     | term T_MULT factor
   18     | term T_DIV factor

   19 factor: atom
   20       | factor T_POW atom

   21 atom: T_NUMBER
   22     | T_ID
   23     | T_LPAREN expr T_RPAREN
   24     | container_init
   25     | T_ID T_LPAREN arg_list T_RPAREN
   26     | T_DOT T_LPAREN expr T_COMMA expr T_RPAREN
   27     | T_NORM T_LPAREN expr T_RPAREN
   28     | T_INV T_LPAREN expr T_RPAREN
   29     | T_TRANSPOSE T_LPAREN expr T_RPAREN

   30 arg_list: ε
   31         | expr
   32         | arg_list T_COMMA expr

   33 vector: T_LBRACKET arg_list T_RBRACKET

   34 row_list: vector
   35         | row_list T_COMMA vector

   36 container_init: vector
   37               | T_LBRACKET row_list T_RBRACKET


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5
    T_NUMBER <dval> (258) 21
    T_ID <sval> (259) 8 9 11 22 25
    T_DEF (260) 9
    T_PLOT (261) 11
    T_PRINT (262) 10
    T_DOT (263) 26
    T_NORM (264) 27
    T_TRANSPOSE (265) 29
    T_INV (266) 28
    T_PLUS (267) 13
    T_MINUS (268) 14 15
    T_MULT (269) 17
    T_DIV (270) 18
    T_POW (271) 20
    T_ASSIGN (272) 8 9
    T_LPAREN (273) 9 10 11 23 25 26 27 28 29
    T_RPAREN (274) 9 10 11 23 25 26 27 28 29
    T_LBRACKET (275) 33 37
    T_RBRACKET (276) 33 37
    T_COMMA (277) 11 26 32 35
    T_EOL (278) 3 4 5
    T_UMINUS (279)


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program <node> (26)
        on left: 1
        on right: 0
    stmt_list <node> (27)
        on left: 2 3 4 5 6
        on right: 1 3 4 5 6
    stmt <node> (28)
        on left: 7 8 9 10 11
        on right: 3 6
    expr <node> (29)
        on left: 12 13 14 15
        on right: 7 8 9 10 11 13 14 23 26 27 28 29 31 32
    term <node> (30)
        on left: 16 17 18
        on right: 12 13 14 15 17 18
    factor <node> (31)
        on left: 19 20
        on right: 16 17 18 20
    atom <node> (32)
        on left: 21 22 23 24 25 26 27 28 29
        on right: 19 20
    arg_list <node> (33)
        on left: 30 31 32
        on right: 25 32 33
    vector <node> (34)
        on left: 33
        on right: 34 35 36
    row_list <node> (35)
        on left: 34 35
        on right: 35 37
    container_init <node> (36)
        on left: 36 37
        on right: 24


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (stmt_list)

    program    go to state 1
    stmt_list  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: stmt_list •
    3 stmt_list: stmt_list • stmt T_EOL
    4          | stmt_list • T_EOL
    5          | stmt_list • error T_EOL
    6          | stmt_list • stmt

    error        shift, and go to state 4
    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 6
    T_DEF        shift, and go to state 7
    T_PLOT       shift, and go to state 8
    T_PRINT      shift, and go to state 9
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16
    T_EOL        shift, and go to state 17

    $end  reduce using rule 1 (program)

    stmt            go to state 18
    expr            go to state 19
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 3

    0 $accept: program $end •

    $default  accept


State 4

    5 stmt_list: stmt_list error • T_EOL

    T_EOL  shift, and go to state 25


State 5

   21 atom: T_NUMBER •

    $default  reduce using rule 21 (atom)


State 6

    8 stmt: T_ID • T_ASSIGN expr
   22 atom: T_ID •
   25     | T_ID • T_LPAREN arg_list T_RPAREN

    T_ASSIGN  shift, and go to state 26
    T_LPAREN  shift, and go to state 27

    T_LPAREN  [reduce using rule 22 (atom)]
    $default  reduce using rule 22 (atom)


State 7

    9 stmt: T_DEF • T_ID T_LPAREN T_ID T_RPAREN T_ASSIGN expr

    T_ID  shift, and go to state 28


State 8

   11 stmt: T_PLOT • T_LPAREN expr T_COMMA T_ID T_COMMA expr T_COMMA expr T_RPAREN

    T_LPAREN  shift, and go to state 29


State 9

   10 stmt: T_PRINT • T_LPAREN expr T_RPAREN

    T_LPAREN  shift, and go to state 30


State 10

   26 atom: T_DOT • T_LPAREN expr T_COMMA expr T_RPAREN

    T_LPAREN  shift, and go to state 31


State 11

   27 atom: T_NORM • T_LPAREN expr T_RPAREN

    T_LPAREN  shift, and go to state 32


State 12

   29 atom: T_TRANSPOSE • T_LPAREN expr T_RPAREN

    T_LPAREN  shift, and go to state 33


State 13

   28 atom: T_INV • T_LPAREN expr T_RPAREN

    T_LPAREN  shift, and go to state 34


State 14

   15 expr: T_MINUS • term

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    term            go to state 36
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 15

   23 atom: T_LPAREN • expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 37
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 16

   33 vector: T_LBRACKET • arg_list T_RBRACKET
   37 container_init: T_LBRACKET • row_list T_RBRACKET

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    $default  reduce using rule 30 (arg_list)

    expr            go to state 38
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    arg_list        go to state 39
    vector          go to state 40
    row_list        go to state 41
    container_init  go to state 24


State 17

    4 stmt_list: stmt_list T_EOL •

    $default  reduce using rule 4 (stmt_list)


State 18

    3 stmt_list: stmt_list stmt • T_EOL
    6          | stmt_list stmt •

    T_EOL  shift, and go to state 42

    T_EOL     [reduce using rule 6 (stmt_list)]
    $default  reduce using rule 6 (stmt_list)


State 19

    7 stmt: expr •
   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44

    T_MINUS   [reduce using rule 7 (stmt)]
    $default  reduce using rule 7 (stmt)


State 20

   12 expr: term •
   17 term: term • T_MULT factor
   18     | term • T_DIV factor

    T_MULT  shift, and go to state 45
    T_DIV   shift, and go to state 46

    $default  reduce using rule 12 (expr)


State 21

   16 term: factor •
   20 factor: factor • T_POW atom

    T_POW  shift, and go to state 47

    $default  reduce using rule 16 (term)


State 22

   19 factor: atom •

    $default  reduce using rule 19 (factor)


State 23

   36 container_init: vector •

    $default  reduce using rule 36 (container_init)


State 24

   24 atom: container_init •

    $default  reduce using rule 24 (atom)


State 25

    5 stmt_list: stmt_list error T_EOL •

    $default  reduce using rule 5 (stmt_list)


State 26

    8 stmt: T_ID T_ASSIGN • expr

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 48
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 27

   25 atom: T_ID T_LPAREN • arg_list T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    $default  reduce using rule 30 (arg_list)

    expr            go to state 38
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    arg_list        go to state 49
    vector          go to state 23
    container_init  go to state 24


State 28

    9 stmt: T_DEF T_ID • T_LPAREN T_ID T_RPAREN T_ASSIGN expr

    T_LPAREN  shift, and go to state 50


State 29

   11 stmt: T_PLOT T_LPAREN • expr T_COMMA T_ID T_COMMA expr T_COMMA expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 51
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 30

   10 stmt: T_PRINT T_LPAREN • expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 52
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 31

   26 atom: T_DOT T_LPAREN • expr T_COMMA expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 53
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 32

   27 atom: T_NORM T_LPAREN • expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 54
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 33

   29 atom: T_TRANSPOSE T_LPAREN • expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 55
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 34

   28 atom: T_INV T_LPAREN • expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 56
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 35

   22 atom: T_ID •
   25     | T_ID • T_LPAREN arg_list T_RPAREN

    T_LPAREN  shift, and go to state 27

    T_LPAREN  [reduce using rule 22 (atom)]
    $default  reduce using rule 22 (atom)


State 36

   15 expr: T_MINUS term •
   17 term: term • T_MULT factor
   18     | term • T_DIV factor

    T_MULT  shift, and go to state 45
    T_DIV   shift, and go to state 46

    $default  reduce using rule 15 (expr)


State 37

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   23 atom: T_LPAREN expr • T_RPAREN

    T_PLUS    shift, and go to state 43
    T_MINUS   shift, and go to state 44
    T_RPAREN  shift, and go to state 57


State 38

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   31 arg_list: expr •

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44

    $default  reduce using rule 31 (arg_list)


State 39

   32 arg_list: arg_list • T_COMMA expr
   33 vector: T_LBRACKET arg_list • T_RBRACKET

    T_RBRACKET  shift, and go to state 58
    T_COMMA     shift, and go to state 59


State 40

   34 row_list: vector •
   36 container_init: vector •

    T_RBRACKET  reduce using rule 34 (row_list)
    T_RBRACKET  [reduce using rule 36 (container_init)]
    T_COMMA     reduce using rule 34 (row_list)
    T_COMMA     [reduce using rule 36 (container_init)]
    $default    reduce using rule 36 (container_init)


State 41

   35 row_list: row_list • T_COMMA vector
   37 container_init: T_LBRACKET row_list • T_RBRACKET

    T_RBRACKET  shift, and go to state 60
    T_COMMA     shift, and go to state 61


State 42

    3 stmt_list: stmt_list stmt T_EOL •

    $default  reduce using rule 3 (stmt_list)


State 43

   13 expr: expr T_PLUS • term

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    term            go to state 62
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 44

   14 expr: expr T_MINUS • term

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    term            go to state 63
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 45

   17 term: term T_MULT • factor

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    factor          go to state 64
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 46

   18 term: term T_DIV • factor

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    factor          go to state 65
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 47

   20 factor: factor T_POW • atom

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    atom            go to state 66
    vector          go to state 23
    container_init  go to state 24


State 48

    8 stmt: T_ID T_ASSIGN expr •
   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44

    T_MINUS   [reduce using rule 8 (stmt)]
    $default  reduce using rule 8 (stmt)


State 49

   25 atom: T_ID T_LPAREN arg_list • T_RPAREN
   32 arg_list: arg_list • T_COMMA expr

    T_RPAREN  shift, and go to state 67
    T_COMMA   shift, and go to state 59


State 50

    9 stmt: T_DEF T_ID T_LPAREN • T_ID T_RPAREN T_ASSIGN expr

    T_ID  shift, and go to state 68


State 51

   11 stmt: T_PLOT T_LPAREN expr • T_COMMA T_ID T_COMMA expr T_COMMA expr T_RPAREN
   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44
    T_COMMA  shift, and go to state 69


State 52

   10 stmt: T_PRINT T_LPAREN expr • T_RPAREN
   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term

    T_PLUS    shift, and go to state 43
    T_MINUS   shift, and go to state 44
    T_RPAREN  shift, and go to state 70


State 53

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   26 atom: T_DOT T_LPAREN expr • T_COMMA expr T_RPAREN

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44
    T_COMMA  shift, and go to state 71


State 54

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   27 atom: T_NORM T_LPAREN expr • T_RPAREN

    T_PLUS    shift, and go to state 43
    T_MINUS   shift, and go to state 44
    T_RPAREN  shift, and go to state 72


State 55

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   29 atom: T_TRANSPOSE T_LPAREN expr • T_RPAREN

    T_PLUS    shift, and go to state 43
    T_MINUS   shift, and go to state 44
    T_RPAREN  shift, and go to state 73


State 56

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   28 atom: T_INV T_LPAREN expr • T_RPAREN

    T_PLUS    shift, and go to state 43
    T_MINUS   shift, and go to state 44
    T_RPAREN  shift, and go to state 74


State 57

   23 atom: T_LPAREN expr T_RPAREN •

    $default  reduce using rule 23 (atom)


State 58

   33 vector: T_LBRACKET arg_list T_RBRACKET •

    $default  reduce using rule 33 (vector)


State 59

   32 arg_list: arg_list T_COMMA • expr

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 75
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 60

   37 container_init: T_LBRACKET row_list T_RBRACKET •

    $default  reduce using rule 37 (container_init)


State 61

   35 row_list: row_list T_COMMA • vector

    T_LBRACKET  shift, and go to state 76

    vector  go to state 77


State 62

   13 expr: expr T_PLUS term •
   17 term: term • T_MULT factor
   18     | term • T_DIV factor

    T_MULT  shift, and go to state 45
    T_DIV   shift, and go to state 46

    $default  reduce using rule 13 (expr)


State 63

   14 expr: expr T_MINUS term •
   17 term: term • T_MULT factor
   18     | term • T_DIV factor

    T_MULT  shift, and go to state 45
    T_DIV   shift, and go to state 46

    $default  reduce using rule 14 (expr)


State 64

   17 term: term T_MULT factor •
   20 factor: factor • T_POW atom

    T_POW  shift, and go to state 47

    $default  reduce using rule 17 (term)


State 65

   18 term: term T_DIV factor •
   20 factor: factor • T_POW atom

    T_POW  shift, and go to state 47

    $default  reduce using rule 18 (term)


State 66

   20 factor: factor T_POW atom •

    $default  reduce using rule 20 (factor)


State 67

   25 atom: T_ID T_LPAREN arg_list T_RPAREN •

    $default  reduce using rule 25 (atom)


State 68

    9 stmt: T_DEF T_ID T_LPAREN T_ID • T_RPAREN T_ASSIGN expr

    T_RPAREN  shift, and go to state 78


State 69

   11 stmt: T_PLOT T_LPAREN expr T_COMMA • T_ID T_COMMA expr T_COMMA expr T_RPAREN

    T_ID  shift, and go to state 79


State 70

   10 stmt: T_PRINT T_LPAREN expr T_RPAREN •

    $default  reduce using rule 10 (stmt)


State 71

   26 atom: T_DOT T_LPAREN expr T_COMMA • expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 80
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 72

   27 atom: T_NORM T_LPAREN expr T_RPAREN •

    $default  reduce using rule 27 (atom)


State 73

   29 atom: T_TRANSPOSE T_LPAREN expr T_RPAREN •

    $default  reduce using rule 29 (atom)


State 74

   28 atom: T_INV T_LPAREN expr T_RPAREN •

    $default  reduce using rule 28 (atom)


State 75

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   32 arg_list: arg_list T_COMMA expr •

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44

    $default  reduce using rule 32 (arg_list)


State 76

   33 vector: T_LBRACKET • arg_list T_RBRACKET

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    $default  reduce using rule 30 (arg_list)

    expr            go to state 38
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    arg_list        go to state 39
    vector          go to state 23
    container_init  go to state 24


State 77

   35 row_list: row_list T_COMMA vector •

    $default  reduce using rule 35 (row_list)


State 78

    9 stmt: T_DEF T_ID T_LPAREN T_ID T_RPAREN • T_ASSIGN expr

    T_ASSIGN  shift, and go to state 81


State 79

   11 stmt: T_PLOT T_LPAREN expr T_COMMA T_ID • T_COMMA expr T_COMMA expr T_RPAREN

    T_COMMA  shift, and go to state 82


State 80

   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term
   26 atom: T_DOT T_LPAREN expr T_COMMA expr • T_RPAREN

    T_PLUS    shift, and go to state 43
    T_MINUS   shift, and go to state 44
    T_RPAREN  shift, and go to state 83


State 81

    9 stmt: T_DEF T_ID T_LPAREN T_ID T_RPAREN T_ASSIGN • expr

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 84
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 82

   11 stmt: T_PLOT T_LPAREN expr T_COMMA T_ID T_COMMA • expr T_COMMA expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 85
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 83

   26 atom: T_DOT T_LPAREN expr T_COMMA expr T_RPAREN •

    $default  reduce using rule 26 (atom)


State 84

    9 stmt: T_DEF T_ID T_LPAREN T_ID T_RPAREN T_ASSIGN expr •
   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44

    T_MINUS   [reduce using rule 9 (stmt)]
    $default  reduce using rule 9 (stmt)


State 85

   11 stmt: T_PLOT T_LPAREN expr T_COMMA T_ID T_COMMA expr • T_COMMA expr T_RPAREN
   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term

    T_PLUS   shift, and go to state 43
    T_MINUS  shift, and go to state 44
    T_COMMA  shift, and go to state 86


State 86

   11 stmt: T_PLOT T_LPAREN expr T_COMMA T_ID T_COMMA expr T_COMMA • expr T_RPAREN

    T_NUMBER     shift, and go to state 5
    T_ID         shift, and go to state 35
    T_DOT        shift, and go to state 10
    T_NORM       shift, and go to state 11
    T_TRANSPOSE  shift, and go to state 12
    T_INV        shift, and go to state 13
    T_MINUS      shift, and go to state 14
    T_LPAREN     shift, and go to state 15
    T_LBRACKET   shift, and go to state 16

    expr            go to state 87
    term            go to state 20
    factor          go to state 21
    atom            go to state 22
    vector          go to state 23
    container_init  go to state 24


State 87

   11 stmt: T_PLOT T_LPAREN expr T_COMMA T_ID T_COMMA expr T_COMMA expr • T_RPAREN
   13 expr: expr • T_PLUS term
   14     | expr • T_MINUS term

    T_PLUS    shift, and go to state 43
    T_MINUS   shift, and go to state 44
    T_RPAREN  shift, and go to state 88


State 88

   11 stmt: T_PLOT T_LPAREN expr T_COMMA T_ID T_COMMA expr T_COMMA expr T_RPAREN •

    $default  reduce using rule 11 (stmt)
